# happy_niver

./: .gitignore  README.md  main.py  pyproject.toml
src/niver/: lista.py
templates/: countdown.html  dashboard.html  index.html
