[project]
name = "happy-niver"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel",email = "jgfrozs@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.28,<0.0.29)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
